--- a/muschool/css/style.css
+++ b/muschool/css/style.css
@@ -583,8 +583,15 @@ input {
 }
 
 .btn {
-  display: inline-grid;
-  place-items: center;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border-radius: 16px;
   padding: 1em;
   -webkit-box-shadow: 0 8px 7px rgba(0, 0, 0, 0.4);
